// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[
  [
    1,
    null
  ],
  [
    1,
    null
  ],
  [
    null
  ],
  [
    0
  ],
  [
    false
  ],
  [
    ""
  ]
]

================================================================================
`;

exports[`boolean.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`json5.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
{
  '//': 'JSON5 allow \`Infinity\` and \`NaN\`',
  numbers: [
    Infinity,
    -Infinity,
    NaN,
  ],
  Infinity: NaN,
  NaN: Infinity,
  NaN: -Infinity,
},
{
  '//': 'JSON5 numbers',
  hexadecimal: 0xdecaf,
  leadingDecimalPoint: .8675309, andTrailing: 8675309.,
  positiveSign: +1,
},
{
  '//': 'JSON5 strings',
singleQuotes: 'I can use "double quotes" here',
  lineBreaks: "Look, Mom! \\
No \\\\n's!",
}
]

=====================================output=====================================
[
  {
    "//": "JSON5 allow \`Infinity\` and \`NaN\`",
    "numbers": [Infinity, -Infinity, NaN],
    "Infinity": NaN,
    "NaN": Infinity,
    "NaN": -Infinity
  },
  {
    "//": "JSON5 numbers",
    "hexadecimal": 0xdecaf,
    "leadingDecimalPoint": 0.8675309,
    "andTrailing": 8675309,
    "positiveSign": +1
  },
  {
    "//": "JSON5 strings",
    "singleQuotes": "I can use \\"double quotes\\" here",
    "lineBreaks": "Look, Mom! \\
No \\\\n's!"
  }
]

================================================================================
`;

exports[`json5.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
{
  '//': 'JSON5 allow \`Infinity\` and \`NaN\`',
  numbers: [
    Infinity,
    -Infinity,
    NaN,
  ],
  Infinity: NaN,
  NaN: Infinity,
  NaN: -Infinity,
},
{
  '//': 'JSON5 numbers',
  hexadecimal: 0xdecaf,
  leadingDecimalPoint: .8675309, andTrailing: 8675309.,
  positiveSign: +1,
},
{
  '//': 'JSON5 strings',
singleQuotes: 'I can use "double quotes" here',
  lineBreaks: "Look, Mom! \\
No \\\\n's!",
}
]

=====================================output=====================================
[
  {
    "//": "JSON5 allow \`Infinity\` and \`NaN\`",
    numbers: [Infinity, -Infinity, NaN],
    Infinity: NaN,
    NaN: Infinity,
    NaN: -Infinity,
  },
  {
    "//": "JSON5 numbers",
    hexadecimal: 0xdecaf,
    leadingDecimalPoint: 0.8675309,
    andTrailing: 8675309,
    positiveSign: +1,
  },
  {
    "//": "JSON5 strings",
    singleQuotes: 'I can use "double quotes" here',
    lineBreaks: "Look, Mom! \\
No \\\\n's!",
  },
]

================================================================================
`;

exports[`json5.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
{
  '//': 'JSON5 allow \`Infinity\` and \`NaN\`',
  numbers: [
    Infinity,
    -Infinity,
    NaN,
  ],
  Infinity: NaN,
  NaN: Infinity,
  NaN: -Infinity,
},
{
  '//': 'JSON5 numbers',
  hexadecimal: 0xdecaf,
  leadingDecimalPoint: .8675309, andTrailing: 8675309.,
  positiveSign: +1,
},
{
  '//': 'JSON5 strings',
singleQuotes: 'I can use "double quotes" here',
  lineBreaks: "Look, Mom! \\
No \\\\n's!",
}
]

=====================================output=====================================
[
  {
    "//": "JSON5 allow \`Infinity\` and \`NaN\`",
    "numbers": [Infinity, -Infinity, NaN],
    "Infinity": NaN,
    "NaN": Infinity,
    "NaN": -Infinity
  },
  {
    "//": "JSON5 numbers",
    "hexadecimal": 0xdecaf,
    "leadingDecimalPoint": 0.8675309,
    "andTrailing": 8675309,
    "positiveSign": +1
  },
  {
    "//": "JSON5 strings",
    "singleQuotes": "I can use \\"double quotes\\" here",
    "lineBreaks": "Look, Mom! \\
No \\\\n's!"
  }
]

================================================================================
`;

exports[`json5.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
{
  '//': 'JSON5 allow \`Infinity\` and \`NaN\`',
  numbers: [
    Infinity,
    -Infinity,
    NaN,
  ],
  Infinity: NaN,
  NaN: Infinity,
  NaN: -Infinity,
},
{
  '//': 'JSON5 numbers',
  hexadecimal: 0xdecaf,
  leadingDecimalPoint: .8675309, andTrailing: 8675309.,
  positiveSign: +1,
},
{
  '//': 'JSON5 strings',
singleQuotes: 'I can use "double quotes" here',
  lineBreaks: "Look, Mom! \\
No \\\\n's!",
}
]

=====================================output=====================================
[
  {
    "//": "JSON5 allow \`Infinity\` and \`NaN\`",
    numbers: [Infinity, -Infinity, NaN],
    Infinity: NaN,
    NaN: Infinity,
    NaN: -Infinity,
  },
  {
    "//": "JSON5 numbers",
    hexadecimal: 0xdecaf,
    leadingDecimalPoint: 0.8675309,
    andTrailing: 8675309,
    positiveSign: +1,
  },
  {
    "//": "JSON5 strings",
    singleQuotes: 'I can use "double quotes" here',
    lineBreaks: "Look, Mom! \\
No \\\\n's!",
  },
]

================================================================================
`;

exports[`json5.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
{
  '//': 'JSON5 allow \`Infinity\` and \`NaN\`',
  numbers: [
    Infinity,
    -Infinity,
    NaN,
  ],
  Infinity: NaN,
  NaN: Infinity,
  NaN: -Infinity,
},
{
  '//': 'JSON5 numbers',
  hexadecimal: 0xdecaf,
  leadingDecimalPoint: .8675309, andTrailing: 8675309.,
  positiveSign: +1,
},
{
  '//': 'JSON5 strings',
singleQuotes: 'I can use "double quotes" here',
  lineBreaks: "Look, Mom! \\
No \\\\n's!",
}
]

=====================================output=====================================
[
  {
    "//": "JSON5 allow \`Infinity\` and \`NaN\`",
    "numbers": [
      Infinity,
      -Infinity,
      NaN
    ],
    "Infinity": NaN,
    "NaN": Infinity,
    "NaN": -Infinity
  },
  {
    "//": "JSON5 numbers",
    "hexadecimal": 912559,
    "leadingDecimalPoint": 0.8675309,
    "andTrailing": 8675309,
    "positiveSign": 1
  },
  {
    "//": "JSON5 strings",
    "singleQuotes": "I can use \\"double quotes\\" here",
    "lineBreaks": "Look, Mom! No \\\\n's!"
  }
]

================================================================================
`;

exports[`json6.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
{'//': 'Keyword \`undefined\`',
    "data": [
      {undefined: undefined},
      undefined,
      [undefined, ]
    ]
  },

{'//': 'back-tick quoted strings',
    "data": [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      {'as-object-value': \`foo\`}
    ]
  },

{'//': 'String escapes ',
    "data": [
      '\\0', '\\xFF', '\\u00FF', \`\\u{1F409}\`
    ]
  },

{'//': 'Numbers',
    "data": [
      0o123, 0b101010, 1e5, 123_456, 0xDeeD_Beef,
      0123,
      -Infinity, -NaN,
      +1, -1,
      +0o123, +0b101010, +1e5, +123_456, +0xDeeD_Beef,
      -0o123, -0b101010, -1e5, -123_456, -0xDeeD_Beef,
    ]
  },

{'//': 'empty members',
    data: [
      [,],
      [1, , 2,,,,],
      [1, , 2],
      [1, , 2,]
    ]
  }
]

=====================================output=====================================
[
  {
    "//": "Keyword \`undefined\`",
    "data": [{ "undefined": undefined }, undefined, [undefined]]
  },

  {
    "//": "back-tick quoted strings",
    "data": [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      { "as-object-value": \`foo\` }
    ]
  },

  { "//": "String escapes ", "data": ["\\0", "\\xFF", "\\u00FF", \`\\u{1F409}\`] },

  {
    "//": "Numbers",
    "data": [
      0o123,
      0b101010,
      1e5,
      123_456,
      0xdeed_beef,
      0123,
      -Infinity,
      -NaN,
      +1,
      -1,
      +0o123,
      +0b101010,
      +1e5,
      +123_456,
      +0xdeed_beef,
      -0o123,
      -0b101010,
      -1e5,
      -123_456,
      -0xdeed_beef
    ]
  },

  { "//": "empty members", "data": [[,], [1, , 2, , , ,], [1, , 2], [1, , 2]] }
]

================================================================================
`;

exports[`json6.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
{'//': 'Keyword \`undefined\`',
    "data": [
      {undefined: undefined},
      undefined,
      [undefined, ]
    ]
  },

{'//': 'back-tick quoted strings',
    "data": [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      {'as-object-value': \`foo\`}
    ]
  },

{'//': 'String escapes ',
    "data": [
      '\\0', '\\xFF', '\\u00FF', \`\\u{1F409}\`
    ]
  },

{'//': 'Numbers',
    "data": [
      0o123, 0b101010, 1e5, 123_456, 0xDeeD_Beef,
      0123,
      -Infinity, -NaN,
      +1, -1,
      +0o123, +0b101010, +1e5, +123_456, +0xDeeD_Beef,
      -0o123, -0b101010, -1e5, -123_456, -0xDeeD_Beef,
    ]
  },

{'//': 'empty members',
    data: [
      [,],
      [1, , 2,,,,],
      [1, , 2],
      [1, , 2,]
    ]
  }
]

=====================================output=====================================
[
  {
    "//": "Keyword \`undefined\`",
    data: [{ undefined: undefined }, undefined, [undefined]],
  },

  {
    "//": "back-tick quoted strings",
    data: [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      { "as-object-value": \`foo\` },
    ],
  },

  { "//": "String escapes ", data: ["\\0", "\\xFF", "\\u00FF", \`\\u{1F409}\`] },

  {
    "//": "Numbers",
    data: [
      0o123,
      0b101010,
      1e5,
      123_456,
      0xdeed_beef,
      0123,
      -Infinity,
      -NaN,
      +1,
      -1,
      +0o123,
      +0b101010,
      +1e5,
      +123_456,
      +0xdeed_beef,
      -0o123,
      -0b101010,
      -1e5,
      -123_456,
      -0xdeed_beef,
    ],
  },

  { "//": "empty members", data: [[,], [1, , 2, , , ,], [1, , 2], [1, , 2]] },
]

================================================================================
`;

exports[`json6.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
{'//': 'Keyword \`undefined\`',
    "data": [
      {undefined: undefined},
      undefined,
      [undefined, ]
    ]
  },

{'//': 'back-tick quoted strings',
    "data": [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      {'as-object-value': \`foo\`}
    ]
  },

{'//': 'String escapes ',
    "data": [
      '\\0', '\\xFF', '\\u00FF', \`\\u{1F409}\`
    ]
  },

{'//': 'Numbers',
    "data": [
      0o123, 0b101010, 1e5, 123_456, 0xDeeD_Beef,
      0123,
      -Infinity, -NaN,
      +1, -1,
      +0o123, +0b101010, +1e5, +123_456, +0xDeeD_Beef,
      -0o123, -0b101010, -1e5, -123_456, -0xDeeD_Beef,
    ]
  },

{'//': 'empty members',
    data: [
      [,],
      [1, , 2,,,,],
      [1, , 2],
      [1, , 2,]
    ]
  }
]

=====================================output=====================================
[
  {
    "//": "Keyword \`undefined\`",
    "data": [{ "undefined": undefined }, undefined, [undefined]]
  },

  {
    "//": "back-tick quoted strings",
    "data": [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      { "as-object-value": \`foo\` }
    ]
  },

  { "//": "String escapes ", "data": ["\\0", "\\xFF", "\\u00FF", \`\\u{1F409}\`] },

  {
    "//": "Numbers",
    "data": [
      0o123,
      0b101010,
      1e5,
      123_456,
      0xdeed_beef,
      0123,
      -Infinity,
      -NaN,
      +1,
      -1,
      +0o123,
      +0b101010,
      +1e5,
      +123_456,
      +0xdeed_beef,
      -0o123,
      -0b101010,
      -1e5,
      -123_456,
      -0xdeed_beef
    ]
  },

  { "//": "empty members", "data": [[,], [1, , 2, , , ,], [1, , 2], [1, , 2]] }
]

================================================================================
`;

exports[`json6.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
{'//': 'Keyword \`undefined\`',
    "data": [
      {undefined: undefined},
      undefined,
      [undefined, ]
    ]
  },

{'//': 'back-tick quoted strings',
    "data": [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      {'as-object-value': \`foo\`}
    ]
  },

{'//': 'String escapes ',
    "data": [
      '\\0', '\\xFF', '\\u00FF', \`\\u{1F409}\`
    ]
  },

{'//': 'Numbers',
    "data": [
      0o123, 0b101010, 1e5, 123_456, 0xDeeD_Beef,
      0123,
      -Infinity, -NaN,
      +1, -1,
      +0o123, +0b101010, +1e5, +123_456, +0xDeeD_Beef,
      -0o123, -0b101010, -1e5, -123_456, -0xDeeD_Beef,
    ]
  },

{'//': 'empty members',
    data: [
      [,],
      [1, , 2,,,,],
      [1, , 2],
      [1, , 2,]
    ]
  }
]

=====================================output=====================================
[
  {
    "//": "Keyword \`undefined\`",
    data: [{ undefined: undefined }, undefined, [undefined]],
  },

  {
    "//": "back-tick quoted strings",
    data: [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      { "as-object-value": \`foo\` },
    ],
  },

  { "//": "String escapes ", data: ["\\0", "\\xFF", "\\u00FF", \`\\u{1F409}\`] },

  {
    "//": "Numbers",
    data: [
      0o123,
      0b101010,
      1e5,
      123_456,
      0xdeed_beef,
      0123,
      -Infinity,
      -NaN,
      +1,
      -1,
      +0o123,
      +0b101010,
      +1e5,
      +123_456,
      +0xdeed_beef,
      -0o123,
      -0b101010,
      -1e5,
      -123_456,
      -0xdeed_beef,
    ],
  },

  { "//": "empty members", data: [[,], [1, , 2, , , ,], [1, , 2], [1, , 2]] },
]

================================================================================
`;

exports[`json6.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
{'//': 'Keyword \`undefined\`',
    "data": [
      {undefined: undefined},
      undefined,
      [undefined, ]
    ]
  },

{'//': 'back-tick quoted strings',
    "data": [
      \`\`,
      \`foo\`,
      \`
  multiple-line
\`,
      \`\\u{1F409}\\\`'"\\\${}\`,
      {'as-object-value': \`foo\`}
    ]
  },

{'//': 'String escapes ',
    "data": [
      '\\0', '\\xFF', '\\u00FF', \`\\u{1F409}\`
    ]
  },

{'//': 'Numbers',
    "data": [
      0o123, 0b101010, 1e5, 123_456, 0xDeeD_Beef,
      0123,
      -Infinity, -NaN,
      +1, -1,
      +0o123, +0b101010, +1e5, +123_456, +0xDeeD_Beef,
      -0o123, -0b101010, -1e5, -123_456, -0xDeeD_Beef,
    ]
  },

{'//': 'empty members',
    data: [
      [,],
      [1, , 2,,,,],
      [1, , 2],
      [1, , 2,]
    ]
  }
]

=====================================output=====================================
[
  {
    "//": "Keyword \`undefined\`",
    "data": [
      {
        "undefined": undefined
      },
      undefined,
      [
        undefined
      ]
    ]
  },
  {
    "//": "back-tick quoted strings",
    "data": [
      "",
      "foo",
      "\\n  multiple-line\\n",
      "🐉\`'\\"\${}",
      {
        "as-object-value": "foo"
      }
    ]
  },
  {
    "//": "String escapes ",
    "data": [
      "\\u0000",
      "ÿ",
      "ÿ",
      "🐉"
    ]
  },
  {
    "//": "Numbers",
    "data": [
      83,
      42,
      100000,
      123456,
      3740122863,
      83,
      -Infinity,
      -NaN,
      1,
      -1,
      83,
      42,
      100000,
      123456,
      3740122863,
      -83,
      -42,
      -100000,
      -123456,
      -3740122863
    ]
  },
  {
    "//": "empty members",
    "data": [
      [
        null
      ],
      [
        1,
        null,
        2,
        null,
        null,
        null
      ],
      [
        1,
        null,
        2
      ],
      [
        1,
        null,
        2
      ]
    ]
  }
]

================================================================================
`;

exports[`key-value.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

================================================================================
`;

exports[`key-value.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  string: "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  stringstringstringstringstringstringstringstring: "stringstringstringstringstringstringstringstring",
  stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring: "string",
}

================================================================================
`;

exports[`key-value.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

================================================================================
`;

exports[`key-value.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  string: "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  stringstringstringstringstringstringstringstring: "stringstringstringstringstringstringstringstring",
  stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring: "string",
}

================================================================================
`;

exports[`key-value.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

================================================================================
`;

exports[`multi-line.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{
  "key1": [
    true,
    false,
    null
  ],
  "key2": {
    "key3": [
      1,
      2,
      "3",
      10000000000,
      0.001
    ]
  }
}

================================================================================
`;

exports[`null.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`number.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`pass1.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 0.123456789e-12,
    "E": 1.23456789e34,
    "": 23456789012e66,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & /",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7
    ],
    "compact": [1, 2, 3, 4, 5, 6, 7],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
    "/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud"
]

================================================================================
`;

exports[`pass1.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    integer: 1234567890,
    real: -9876.54321,
    e: 0.123456789e-12,
    E: 1.23456789e34,
    "": 23456789012e66,
    zero: 0,
    one: 1,
    space: " ",
    quote: '"',
    backslash: "\\\\",
    controls: "\\b\\f\\n\\r\\t",
    slash: "/ & /",
    alpha: "abcdefghijklmnopqrstuvwyz",
    ALPHA: "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    digit: "0123456789",
    "0123456789": "digit",
    special: "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    hex: "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    true: true,
    false: false,
    null: null,
    array: [],
    object: {},
    address: "50 St. James Street",
    url: "http://www.JSON.org/",
    comment: "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7,
    ],
    compact: [1, 2, 3, 4, 5, 6, 7],
    jsontext: '{"object with 1 member":["array with 1 element"]}',
    quotes: "&#34; \\u0022 %22 0x22 034 &#x22;",
    "/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string",
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud",
]

================================================================================
`;

exports[`pass1.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 0.123456789e-12,
    "E": 1.23456789e34,
    "": 23456789012e66,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & /",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7
    ],
    "compact": [1, 2, 3, 4, 5, 6, 7],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
    "/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud"
]

================================================================================
`;

exports[`pass1.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    integer: 1234567890,
    real: -9876.54321,
    e: 0.123456789e-12,
    E: 1.23456789e34,
    "": 23456789012e66,
    zero: 0,
    one: 1,
    space: " ",
    quote: '"',
    backslash: "\\\\",
    controls: "\\b\\f\\n\\r\\t",
    slash: "/ & /",
    alpha: "abcdefghijklmnopqrstuvwyz",
    ALPHA: "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    digit: "0123456789",
    "0123456789": "digit",
    special: "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    hex: "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    true: true,
    false: false,
    null: null,
    array: [],
    object: {},
    address: "50 St. James Street",
    url: "http://www.JSON.org/",
    comment: "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7,
    ],
    compact: [1, 2, 3, 4, 5, 6, 7],
    jsontext: '{"object with 1 member":["array with 1 element"]}',
    quotes: "&#34; \\u0022 %22 0x22 034 &#x22;",
    "/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string",
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud",
]

================================================================================
`;

exports[`pass1.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  {
    "object with 1 member": [
      "array with 1 element"
    ]
  },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 1.23456789e-13,
    "E": 1.23456789e+34,
    "": 2.3456789012e+76,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & /",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "ģ䕧覫췯ꯍ",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1,
      2,
      3,
      4,
      5,
      6,
      7
    ],
    "compact": [
      1,
      2,
      3,
      4,
      5,
      6,
      7
    ],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\" %22 0x22 034 &#x22;",
    "/\\\\\\"쫾몾ꮘﳞ볚\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
  },
  0.5,
  98.6,
  99.44,
  1066,
  10,
  1,
  0.1,
  1,
  2,
  2,
  "rosebud"
]

================================================================================
`;

exports[`positive-number.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
+123

=====================================output=====================================
+123

================================================================================
`;

exports[`positive-number.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
+123

=====================================output=====================================
+123

================================================================================
`;

exports[`positive-number.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
+123

=====================================output=====================================
+123

================================================================================
`;

exports[`positive-number.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
+123

=====================================output=====================================
+123

================================================================================
`;

exports[`positive-number.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
+123

=====================================output=====================================
123

================================================================================
`;

exports[`propertyKey.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
    a: 123
}

=====================================output=====================================
{
  "a": 123
}

================================================================================
`;

exports[`propertyKey.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
    a: 123
}

=====================================output=====================================
{
  a: 123,
}

================================================================================
`;

exports[`propertyKey.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    a: 123
}

=====================================output=====================================
{
  "a": 123
}

================================================================================
`;

exports[`propertyKey.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    a: 123
}

=====================================output=====================================
{
  a: 123,
}

================================================================================
`;

exports[`propertyKey.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    a: 123
}

=====================================output=====================================
{
  "a": 123
}

================================================================================
`;

exports[`single-line.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{
  "key1": [
    true,
    false,
    null
  ],
  "key2": {
    "key3": [
      1,
      2,
      "3",
      10000000000,
      0.001
    ]
  }
}

================================================================================
`;

exports[`single-quote.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`string.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;
